--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SCE Construction - Contact Us</title>
+		<title>SCE Construction - Thank you</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 	</head>
@@ -44,6 +44,10 @@
 				</div>
 			</div>
 			<div class="main-container">
+                <div class="contactus">
+					<h3>Thank you for your message</h3>
+					<p>We will get back to you as soon as possible!</p>
+				</div>
                 <div class="form-container">
                     <div class="form">
                         <div class="contact-info">
