--- a/contactus.html
+++ b/contactus.html
@@ -18,7 +18,7 @@
 				</button>
 				<nav class="left-nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Projects</a></li>
 					</ul>
@@ -32,7 +32,7 @@
 					<ul>
 						<li><a href="#">Services</a></li>
 						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Contact Us</a></li>
+						<li><a href="/contactus.html">Contact Us</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -117,33 +117,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
-				<!-- <div class="contactus">
-					<h3>Thank you for your message</h3>
-					<p>We will get back to you as soon as possible!</p>
-				</div>
-                <div class="form-container">
-                    <form action="https://formsubmit.co/w1zz13@gmail.com" method="POST">
-                        <input type="text" name="_honey" style="display:none">
-                        <input type="hidden" name="_captcha" value="false">
-                        <div class="input-container-2row">
-                            <input type="text" name="First&nbsp;Name" id="firstName" placeholder="First Name" required>
-                            <input type="text" name="Last&nbsp;Name" id="lastName" placeholder="Last Name" required>
-                        </div>
-                        <div class="input-container-2row">
-                            <input type="email" name="email" id="emailInfo" placeholder="Email address" required>
-                            <input type="text" name="phone" id="phoneNumber" placeholder="Phone Number">
-                        </div>
-                        <div class="input-container-1row">
-                            <input type="text" name="subject" id="subjectInfo" placeholder="Subject" required>
-                        </div>
-                        <div class="input-container-1row">
-                            <textarea name="message" id="messageInfo" placeholder="Your Message" required></textarea>
-                        </div>
-                        <button type="submit" class="contactus-btn">Send</button>
-                   </form>
-					<a class="contactus-btn" href="#">Send</a>
-                </div> -->			
+                </div>		
 			</div>
 		</main>
 		<footer class="page-footer">
