--- a/thankyou.html
+++ b/thankyou.html
@@ -18,7 +18,7 @@
 				</button>
 				<nav class="left-nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Projects</a></li>
 					</ul>
@@ -32,7 +32,7 @@
 					<ul>
 						<li><a href="#">Services</a></li>
 						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Contact Us</a></li>
+						<li><a href="/contactus.html">Contact Us</a></li>
 					</ul>
 				</nav>
 			</div>
