--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>SCE Construction</title>
+		<title>SCE Construction - Services</title>
 		<link rel="stylesheet" href="css/style.css" />
 		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 	</head>
@@ -40,36 +40,11 @@
 		<main>
 			<div class="banner">
 				<div class="banner-block">
-					<h1>Turning houses into homes since 2001</h1>
+					<h1>Services</h1>
 				</div>
 			</div>
 			<div class="main-container">
-				<div class="aboutus">
-					<h3>Who we are</h3>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi, soluta. Voluptas ipsum sapiente similique deleniti facilis, impedit esse quibusdam voluptatibus ab pariatur illum minus laborum nulla possimus commodi at voluptatem!
-					Magnam quas inventore corporis quibusdam exercitationem sit nihil amet labore quam magni sed sapiente, odit omnis consectetur consequuntur aperiam obcaecati quis commodi cum aspernatur. Incidunt perspiciatis porro sequi? Temporibus, magnam!
-					Velit possimus explicabo eveniet consequatur accusantium, dicta minus dolorum. Consequuntur delectus, expedita at nostrum unde rerum? Quisquam fugiat enim minus, odit recusandae eligendi. Totam aperiam maiores vel labore quae eveniet.
-					Odio rerum doloremque iste ab dolor harum voluptatum repellendus magni sunt dolores. Nemo itaque placeat reiciendis, sunt aperiam dolore doloremque vero. Dolor illo, commodi voluptates impedit repellat unde soluta odio!
-					Placeat facere et corrupti repellat incidunt quaerat quibusdam asperiores at illo dolore, nemo ullam totam quae sapiente aut neque impedit facilis, atque animi iste? Necessitatibus, deleniti. Harum, modi aperiam. Atque.</p>
-					<a class="aboutus-btn" href="#">About Us</a>
-				</div>
-				<div class="testimonials">
-					<h3>Testimonials</h3>
-					<div class="quotes">
-						<div class="quote1">
-							<p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut similique, neque delectus, vel nisi minus quos voluptatum possimus, est unde deserunt voluptatem hic quod error non maxime at iusto. Quisquam voluptate aspernatur obcaecati harum maxime dicta ipsa quasi minima itaque."</p><br />
-							<p class="author">John Doe, CEO Sainsbury</p>
-						</div>
-						<div class="quote2">
-							<p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut similique, neque delectus, vel nisi minus quos voluptatum possimus, est unde deserunt voluptatem hic quod error non maxime at iusto. Quisquam voluptate aspernatur obcaecati harum maxime dicta ipsa quasi minima itaque."</p><br />
-							<p class="author">John Doe, CEO Sainsbury</p>
-						</div>
-						<div class="quote3">
-							<p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut similique, neque delectus, vel nisi minus quos voluptatum possimus, est unde deserunt voluptatem hic quod error non maxime at iusto. Quisquam voluptate aspernatur obcaecati harum maxime dicta ipsa quasi minima itaque."</p><br />
-							<p class="author">John Doe, CEO Sainsbury</p>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</main>
 		<footer class="page-footer">
