--- a/thankyou.html
+++ b/thankyou.html
@@ -19,8 +19,8 @@
 				<nav class="left-nav">
 					<ul>
 						<li><a href="/index.html">Home</a></li>
-						<li><a href="#">About Us</a></li>
-						<li><a href="#">Projects</a></li>
+						<li><a href="/aboutus.html">About Us</a></li>
+						<li><a href="/projects.html">Projects</a></li>
 					</ul>
 				</nav>
 				<div class="header-logo">
@@ -30,8 +30,8 @@
 				</div>
 				<nav class="right-nav">
 					<ul>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Testimonials</a></li>
+						<li><a href="/services.html">Services</a></li>
+						<li><a href="/testimonials.html">Testimonials</a></li>
 						<li><a href="/contactus.html">Contact Us</a></li>
 					</ul>
 				</nav>
